--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -1,2 +1,4 @@
 browser = chrome
-#HomePageUrl = https://dsportalapp.herokuapp.com
+MainPageUrl = https://dsportalapp.herokuapp.com
+HomePageUrl = https://dsportalapp.herokuapp.com/home
+LoginPageUrl = https://dsportalapp.herokuapp.com/login
