--- a/pom.xml
+++ b/pom.xml
@@ -4,218 +4,146 @@
   <artifactId>TechBloomers_DSAlgo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-<dependencies>
+ <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <selenium.version>4.16.1</selenium.version>
+        <cucumber.version>7.15.0</cucumber.version>
+        <testng.version>7.9.0</testng.version>
+        <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
+        <maven.surefire.plugin.version>3.2.3</maven.surefire.plugin.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
+  
+  <dependencies>
+	  
+   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+   <dependency>
+     <groupId>org.seleniumhq.selenium</groupId>
+     <artifactId>selenium-java</artifactId>
+     <version>${selenium.version}</version>
+   </dependency>
+   
+   <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+	<dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>${cucumber.version}</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+	<dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>${cucumber.version}</version>
+	</dependency>
+	
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>${cucumber.version}</version>
+      <scope>test</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+   <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-picocontainer</artifactId>
+      <version>${cucumber.version}</version>
+	</dependency>
+	
+	
+	
+	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+	<dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.7</version>
+      <scope>test</scope>
+	</dependency>
 
-<dependency>
-<groupId>io.cucumber</groupId>
-<artifactId>cucumber-java</artifactId>
-<version>7.8.1</version>
-</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+	<dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.20.0</version>
+	</dependency>
 
-<dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.20.0</version>
+	</dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.7.1</version>
+			<scope>test</scope>
+		</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+	<dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.6.2</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+	<dependency>
    	 	<groupId>tech.grasshopper</groupId>
     	<artifactId>extentreports-cucumber7-adapter</artifactId>
     	<version>1.14.0</version>
 	</dependency>
-
-<dependency>
-<groupId>io.cucumber</groupId>
-<artifactId>cucumber-core</artifactId>
-<version>7.8.1</version>
-</dependency>
-
-<dependency>
-<groupId>io.cucumber</groupId>
-<artifactId>cucumber-junit</artifactId>
-<version>7.8.1</version>
-<scope>test</scope>
-</dependency>
-
-<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
-<dependency>
-    <groupId>com.googlecode.json-simple</groupId>
-    <artifactId>json-simple</artifactId>
-    <version>1.1.1</version>
-</dependency>
-
-<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
-<dependency>
-<groupId>io.cucumber</groupId>
-<artifactId>cucumber-testng</artifactId>
-<version>7.13.0</version>
-</dependency>
-
-
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-<groupId>org.testng</groupId>
-<artifactId>testng</artifactId>
-<version>7.7.1</version>
-<scope>test</scope>
-</dependency>
-
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-<dependency>
-<groupId>org.apache.poi</groupId>
-<artifactId>poi</artifactId>
-<version>5.2.3</version>
-</dependency>
-
-
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-<dependency>
-<groupId>org.apache.poi</groupId>
-<artifactId>poi-ooxml</artifactId>
-<version>5.2.3</version>
-</dependency>
-
-<!-- https://mvnrepository.com/artifact/junit/junit -->
-<dependency>
-<groupId>junit</groupId>
-<artifactId>junit</artifactId>
-<version>4.13.2</version>
-<scope>test</scope>
-</dependency>
-
-
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<dependency>
-<groupId>org.seleniumhq.selenium</groupId>
-<artifactId>selenium-java</artifactId>
-<version>4.9.1</version>
-</dependency>
-
-
-<dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
+	<dependency>
    	 	<groupId>io.qameta.allure</groupId>
     	<artifactId>allure-cucumber7-jvm</artifactId>
    		<version>2.25.0</version>
 	</dependency>
-<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-junit4 -->
-<dependency>
-    <groupId>io.qameta.allure</groupId>
-    <artifactId>allure-junit4</artifactId>
-    <version>2.27.0</version>
-    <scope>test</scope>
-</dependency>
 
-<dependency>
-    <groupId>io.qameta.allure</groupId>
-    <artifactId>allure-testng</artifactId>
-    <version>2.25.0</version>
-</dependency>
+	<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+	<dependency>
+   		<groupId>io.qameta.allure</groupId>
+    	<artifactId>allure-testng</artifactId>
+    	<version>2.25.0</version>
+	</dependency>
 
-
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>3.0.0-alpha1</version>
-</dependency>
-
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-api</artifactId>
-    <version>3.0.0-alpha1</version>
-  </dependency>
-
-<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
-<dependency>
-    <groupId>io.cucumber</groupId>
-    <artifactId>cucumber-picocontainer</artifactId>
-    <version>7.17.0</version>
-</dependency>
-
-<!-- <dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>5.1.1</version>
-</dependency> -->
-
-
-<dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-simple</artifactId>
-    <version>2.0.12</version>
-    <scope>test</scope>
-</dependency>
-
-<dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-api</artifactId>
-    <version>2.0.12</version>
-</dependency>
-
-<!-- <dependency>
-<groupId>tech.grasshopper</groupId>
-<artifactId>extentreports-cucumber7-adapter</artifactId>
-<version>1.13.0</version>
-</dependency> -->
-
-<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-<dependency>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-surefire-plugin</artifactId>
-    <version>3.2.5</version>
-</dependency>
-<dependency>
-    <groupId>io.github.bonigarcia</groupId>
-    <artifactId>webdrivermanager</artifactId>
-    <version>5.6.2</version>
-</dependency>
-</dependencies>
-
-  <build>
-		 <plugins>
+  </dependencies>
+  
+ <build>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<version>3.13.0</version>
+
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<includes>
+						<include>**/Runner.java</include>
+					</includes>
+					<properties>
+						<parallel>methods</parallel>
+						<useUnlimitedThreads>true</useUnlimitedThreads>
+						<threadCount>5</threadCount>
+					</properties>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 				</configuration>
 			</plugin>
-			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-surefire-plugin</artifactId>
-    <version>3.2.5</version>
-    </plugin>
-    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-failsafe-plugin</artifactId>
-    <version>3.2.5</version>
-<executions>
-<execution>
-	<goals>
-		<goal>integration-test</goal>
-	</goals>
-
-    <configuration>
-							<includes>
-								<include>**/Runner.java</include>
-							</includes>
-							<parallel>methods</parallel>
-                            <threadCount>4</threadCount>
-                            <useUnlimitedThreads>true</useUnlimitedThreads>
-				</configuration>
-				</execution>
-				</executions>
-</plugin>
-
-		<plugin>
-<groupId>io.qameta.allure</groupId>
-<artifactId>allure-maven</artifactId>
-<version>2.12.0</version>
-<configuration>
-<reportVersion>2.16.0</reportVersion>
-<reportDirectory>${project.build.directory}/allure-report</reportDirectory>
-</configuration>
-</plugin>
 		</plugins>
 	</build>
 
-
-
+  
 </project>
