--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
       <version>${cucumber.version}</version>
 	</dependency>
 	
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
+
 	
 	
 	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
@@ -130,16 +137,16 @@
 				<version>3.2.5</version>
 				<configuration>
 					<includes>
-						<include>**/Runner1.java</include>
+						<include>**/Runner.java</include>
 					</includes>
 					<properties>
 						<parallel>methods</parallel>
 						<useUnlimitedThreads>true</useUnlimitedThreads>
 						<threadCount>5</threadCount>
 					</properties>
-				<!--	<suiteXmlFiles>
+					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
-					</suiteXmlFiles> -->
+					</suiteXmlFiles> 
 				</configuration>
 			</plugin>
 		</plugins>
